# adthand

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
dameon/: Cargo.toml
dameon/src/: main.rs  socket.rs
src/: main.rs  parser.rs  waybar.rs
utils/: Cargo.toml
utils/src/: lib.rs  prayer.rs
