workspace = { members = ["dameon", "utils"] }
[package]
name = "adthand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = "0.6.0"
clap = { version = "4.5.4", features = ["derive"] }
utils = { version = "0.1.0", path = "./utils" }
