[package]
name = "dameon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = "0.6.0"
ctrlc = "3.4.4"
fern = "0.6.2"
humantime = "2.1.0"
log = "0.4.21"
utils = { version = "0.1.0", path = "../utils" }
