[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = "0.6.0"
chrono = "0.4.37"
chrono-tz = "0.10.1"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = { version = "1.43.0", features = ["time"] }
